# raytracing

./: CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml
include/raytracing/: geometry.hpp  image.hpp  ray.hpp
src/raytracing/: image.cpp
tests/: CMakeLists.txt  geometry_test.cpp  image_test.cpp  ray_test.cpp
